# yoshunko-admin-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PACKAGE_OPTIMIZATION.md  README.md  build-run.ps1  build.ps1  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
docs/superpowers/: 2026-05-13-frontend-rewrite-review.md
scripts/: release.cjs
src/: App.vue  constants.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: avatar_camps_override.json  avatar_names.json  avatar_professions.json  avatar_rarity.json  camps.json  equip_stat_names.json  equip_suit_names_zh.json  weapon_names_zh.json  weapon_professions.json
src-tauri/data/en/: avatar_en.json  suit_en.json  weapon_en.json
src-tauri/data/templates/: AvatarBaseTemplateTb.json  AvatarFormTemplateTb.json  EquipmentSuitTemplateTb.json  EquipmentTemplateTb.json  WeaponTemplateTb.json
src-tauri/src/: api.rs  data_manager.rs  lib.rs  log_manager.rs  main.rs  template_loader.rs  zon.rs
src-tauri/src/api/: avatars.rs  config.rs  debug.rs  equips.rs  hadal.rs  helpers.rs  image.rs  launch.rs  logs.rs  mod.rs  players.rs  templates.rs  weapons.rs  window.rs
src/assets/: pinyin-data.ts
src/composables/: useAppState.ts  useBackground.ts  useKeyboard.ts  usePanelEditor.ts  useStaggeredAnimation.ts  useTheme.ts  useUpdater.ts
src/lib/: api.ts  types.ts  utils.ts
src/styles/: theme.css  vue-extras.css
static/: app.html  index.html
(+44 files in other folders)
